added main.yml for cicd